# KonataDancingOpenGL

./: .gitattributes  CMakeLists.txt  KonataDancingOpenGL.c  KonataDancingOpenGL.sln  KonataDancingOpenGL.vcxproj  KonataDancingOpenGL.vcxproj.filters  README.md
KonataDa.ca87f7c1/x64/Debug/: CodeAnalysisResultManifest.txt  KonataDancingOpenGL.exe.recipe  KonataDancingOpenGL.nativecodeanalysis.sarif  KonataDancingOpenGL.nativecodeanalysis.xml  vc.nativecodeanalysis.all.xml  vc143.idb
KonataDa.ca87f7c1/x64/Debug/KonataDa.ca87f7c1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  KonataDancingOpenGL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
KonataDa.ca87f7c1/x64/Release/: KonataDancingOpenGL.exe.recipe  KonataDancingOpenGL.iobj  KonataDancingOpenGL.ipdb
KonataDa.ca87f7c1/x64/Release/KonataDa.ca87f7c1.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  KonataDancingOpenGL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
